add spock and create tests